--- a/modulo1-fundamentos/bloco3-introducao-html-css/dia3-2/index.html
+++ b/modulo1-fundamentos/bloco3-introducao-html-css/dia3-2/index.html
@@ -3,40 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style>
-      body {
-        font-size: 16px;
-      }
-      p {
-        font-weight: 600;
-        font-size: 3em;
-        text-align: center;
-      }
-      li {
-        line-height: 2em;
-      }
-      h1 {
-        font-family: sans-serif;
-        font-size: 65px;
-        color: orange;
-        text-decoration: saddlebrown wavy underline;
-      }
-      .fundo-laranja {
-        background-color: orangered;
-      }
-      #item-amarelo {
-        background-color: yellow;
-        font-family: serif;
-      }
-      #item-vermelho {
-        background-color: red;
-        font-family: cursive;
-      }
-      #item-marrom {
-        background-color: saddlebrown;
-        font-family: monospace;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
