exercícios do dia 6-5: parte ii - adiciona classe container-aside

--- a/modulo1-fundamentos/bloco6-html-css-forms-flexbox-responsivo/dia6-5/exercise2.html
+++ b/modulo1-fundamentos/bloco6-html-css-forms-flexbox-responsivo/dia6-5/exercise2.html
@@ -19,33 +19,35 @@
         </ul>
       </nav>
     </header>
-    <aside class="aside-one">
-      <h2>Chapters</h2>
-      <ul>
-        <li>I. Down the Rabbit-Hole</li>
-        <li>II. The Pool of Tears</li>
-        <li>III. A Caucus-Race and a Long Tale</li>
-        <li>IV. The Rabbit Sends in a Little Bill</li>
-        <li>V. Advice from a Caterpillar</li>
-        <li>VI. Pig and Pepper</li>
-        <li>VII. A Mad Tea-Party</li>
-        <li>VIII. The Queen's Croquet-Ground</li>
-        <li>IX. The Mock Turtle's Story</li>
-        <li>X. The Lobster Quadrille</li>
-        <li>XI. Who Stole the Tarts?</li>
-        <li>XII. Alice's Evidence</li>
-      </ul>
-    </aside>
-    <aside class="aside-two">
-      <h2>Information</h2>
-      <ul>
-        <li>Title: Alice's Adventures in Wonderland</li>
-        <li>Author: Lewis Carroll</li>
-        <li>Release Date: June 25, 2008 [EBook #11]</li>
-        <li>Last Updated: July 14, 2014</li>
-        <li>Language: English</li>
-      </ul>
-    </aside>
+    <div class="container-aside">
+      <aside class="aside-one">
+        <h2>Chapters</h2>
+        <ul>
+          <li>I. Down the Rabbit-Hole</li>
+          <li>II. The Pool of Tears</li>
+          <li>III. A Caucus-Race and a Long Tale</li>
+          <li>IV. The Rabbit Sends in a Little Bill</li>
+          <li>V. Advice from a Caterpillar</li>
+          <li>VI. Pig and Pepper</li>
+          <li>VII. A Mad Tea-Party</li>
+          <li>VIII. The Queen's Croquet-Ground</li>
+          <li>IX. The Mock Turtle's Story</li>
+          <li>X. The Lobster Quadrille</li>
+          <li>XI. Who Stole the Tarts?</li>
+          <li>XII. Alice's Evidence</li>
+        </ul>
+      </aside>
+      <aside class="aside-two">
+        <h2>Information</h2>
+        <ul>
+          <li>Title: Alice's Adventures in Wonderland</li>
+          <li>Author: Lewis Carroll</li>
+          <li>Release Date: June 25, 2008 [EBook #11]</li>
+          <li>Last Updated: July 14, 2014</li>
+          <li>Language: English</li>
+        </ul>
+      </aside>
+    </div>
     <article class="main-content">
       <h1>
         CHAPTER I. Down the Rabbit-Hole
