--- a/modulo1-fundamentos/bloco9-javascript-testes-assincronos/dia9-2/X-agora-a-pratica/index.html
+++ b/modulo1-fundamentos/bloco9-javascript-testes-assincronos/dia9-2/X-agora-a-pratica/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Get ready for a great joke!</h1>
     <h2 id="jokeContainer"></h2>
+    <script src="apiScript.js"></script>
   </body>
 </html>
